test/classes/initializers/errors/fieldRecordTypeMismatch.good
fieldRecordTypeMismatch.chpl:12: In initializer:
fieldRecordTypeMismatch.chpl:10: error: 'R' undeclared (first use this function)
